--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="metronic/css/components.css">
     <link rel="stylesheet" href="metronic/css/google_fonts.css">
     
-    
+    <script src="metronic/js/jquery.blockui.min.js" type="text/javascript"></script>
     <script src="metronic/js/jquery.slimscroll.js" type="text/javascript"></script>
     <script src="metronic/js/app.js" type="text/javascript"></script>
     <!-- /metronic -->
